--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   position: relative;
   background-color: #e7a4e4;
   color: #d3f4ff;
-  width: 750%;
+  width: 7.5rem;
   text-align: center;
 }
 
@@ -27,7 +27,7 @@ width: 0.76rem;
 
 .Account_line {
   position: relative;
-  left: 80rem;
+  left: 70%;
   margin-bottom: 0.5rem;
   padding-top: 0.3rem;
 }
