--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   position: relative;
   background-color: #e7a4e4;
   color: #d3f4ff;
-  width: 7.5rem;
+  width: 100%;
   text-align: center;
 }
 
