--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .main_menu {
-  background-color: #e7a4e4;
+  background-color: #7fff0;
 }
 
 .menu_1{
@@ -7,7 +7,7 @@
   border: solid 1px;
   border-color: #d3f4ff;
   position: relative;
-  background-color: #e7a4e4;
+  background-color: #7fff0;
   color: #d3f4ff;
   width: 100%;
   text-align: center;
@@ -18,7 +18,7 @@
   border: solid 1px;
   border-color: #d3f4ff;
   position: relative;
-  background-color: #e7a4e4;
+  background-color: #7fff0;
   color: #d3f4ff;
 }
  .menu_img {
